fret-electron/support/LTLSIM_NuSMVParser/LTLSIM_NuSMVParser.js
// *****************************************************************************
// Notices:
//
// Copyright © 2019, 2021 United States Government as represented by the Administrator
// of the National Aeronautics and Space Administration. All Rights Reserved.
//
// Disclaimers
//
// No Warranty: THE SUBJECT SOFTWARE IS PROVIDED "AS IS" WITHOUT ANY WARRANTY OF
// ANY KIND, EITHER EXPRESSED, IMPLIED, OR STATUTORY, INCLUDING, BUT NOT LIMITED
// TO, ANY WARRANTY THAT THE SUBJECT SOFTWARE WILL CONFORM TO SPECIFICATIONS,
// ANY IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE,
// OR FREEDOM FROM INFRINGEMENT, ANY WARRANTY THAT THE SUBJECT SOFTWARE WILL BE
// ERROR FREE, OR ANY WARRANTY THAT DOCUMENTATION, IF PROVIDED, WILL CONFORM TO
// THE SUBJECT SOFTWARE. THIS AGREEMENT DOES NOT, IN ANY MANNER, CONSTITUTE AN
// ENDORSEMENT BY GOVERNMENT AGENCY OR ANY PRIOR RECIPIENT OF ANY RESULTS,
// RESULTING DESIGNS, HARDWARE, SOFTWARE PRODUCTS OR ANY OTHER APPLICATIONS
// RESULTING FROM USE OF THE SUBJECT SOFTWARE.  FURTHER, GOVERNMENT AGENCY
// DISCLAIMS ALL WARRANTIES AND LIABILITIES REGARDING THIRD-PARTY SOFTWARE, IF
// PRESENT IN THE ORIGINAL SOFTWARE, AND DISTRIBUTES IT ''AS IS.''
//
// Waiver and Indemnity:  RECIPIENT AGREES TO WAIVE ANY AND ALL CLAIMS AGAINST
// THE UNITED STATES GOVERNMENT, ITS CONTRACTORS AND SUBCONTRACTORS, AS WELL AS
// ANY PRIOR RECIPIENT.  IF RECIPIENT'S USE OF THE SUBJECT SOFTWARE RESULTS IN
// ANY LIABILITIES, DEMANDS, DAMAGES, EXPENSES OR LOSSES ARISING FROM SUCH USE,
// INCLUDING ANY DAMAGES FROM PRODUCTS BASED ON, OR RESULTING FROM, RECIPIENT'S
// USE OF THE SUBJECT SOFTWARE, RECIPIENT SHALL INDEMNIFY AND HOLD HARMLESS THE
// UNITED STATES GOVERNMENT, ITS CONTRACTORS AND SUBCONTRACTORS, AS WELL AS ANY
// PRIOR RECIPIENT, TO THE EXTENT PERMITTED BY LAW.  RECIPIENT'S SOLE REMEDY FOR
// ANY SUCH MATTER SHALL BE THE IMMEDIATE, UNILATERAL TERMINATION OF THIS
// AGREEMENT.
// *****************************************************************************
// Generated from LTLSIM_NuSMV.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var LTLSIM_NuSMVListener = require('./LTLSIM_NuSMVListener').LTLSIM_NuSMVListener;
var LTLSIM_NuSMVVisitor = require('./LTLSIM_NuSMVVisitor').LTLSIM_NuSMVVisitor;

var grammarFileName = "LTLSIM_NuSMV.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'$post_condition$'", "'$action$'", "'$scope_mode$'", 
                     "'$stop_condition$'", "'$regular_condition$'", "'$action1$'", 
                     "'$action2$'", "'FTP'", "'FFin_$scope_mode$'", "'FLin_$scope_mode$'", 
                     "'Fin_$scope_mode$'", "'Lin_$scope_mode$'", "'FNin_$scope_mode$'", 
                     "'LNin_$scope_mode$'", "'$duration$'", "'$duration$+1'", 
                     "'H'", "'O'", "'<|'", "'Y'", "'S'", "'T'", "'SI'", 
                     "'G'", "'F'", "'|>'", "'X'", "'U'", "'V'", "'UI'", 
                     "'='", "'<'", "'<='", "'>'", "'>='", "'['", "','", 
                     "']'", "'('", "')'", "'!'", "'&'", "'|'", "'xor'", 
                     "'->'", "'<->'", "'FALSE'", "'TRUE'", "'^'", "'*'", 
                     "'/'", "'%'", "'+'", "'-'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', "ID", 
                      "NUMBER", "UINT", "WS" ];

var ruleNames =  [ "plHolders", "durPlHolders", "proposition", "simpleExpr", 
                   "arithmetic_expr", "ltlExpr", "pastTimedUnaryOp", "pastUnaryOp", 
                   "pastBinaryOp", "futureTimedUnaryOp", "futureUnaryOp", 
                   "futureBinaryOp", "comparisonOp", "bound", "saltBound", 
                   "lp", "lpA", "rp", "rpA", "not", "and", "or", "xor", 
                   "implies", "equiv", "f", "t", "expt", "mult", "div", 
                   "mod", "plus", "minus", "negate" ];

function LTLSIM_NuSMVParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

LTLSIM_NuSMVParser.prototype = Object.create(antlr4.Parser.prototype);
LTLSIM_NuSMVParser.prototype.constructor = LTLSIM_NuSMVParser;

Object.defineProperty(LTLSIM_NuSMVParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

LTLSIM_NuSMVParser.EOF = antlr4.Token.EOF;
LTLSIM_NuSMVParser.T__0 = 1;
LTLSIM_NuSMVParser.T__1 = 2;
LTLSIM_NuSMVParser.T__2 = 3;
LTLSIM_NuSMVParser.T__3 = 4;
LTLSIM_NuSMVParser.T__4 = 5;
LTLSIM_NuSMVParser.T__5 = 6;
LTLSIM_NuSMVParser.T__6 = 7;
LTLSIM_NuSMVParser.T__7 = 8;
LTLSIM_NuSMVParser.T__8 = 9;
LTLSIM_NuSMVParser.T__9 = 10;
LTLSIM_NuSMVParser.T__10 = 11;
LTLSIM_NuSMVParser.T__11 = 12;
LTLSIM_NuSMVParser.T__12 = 13;
LTLSIM_NuSMVParser.T__13 = 14;
LTLSIM_NuSMVParser.T__14 = 15;
LTLSIM_NuSMVParser.T__15 = 16;
LTLSIM_NuSMVParser.T__16 = 17;
LTLSIM_NuSMVParser.T__17 = 18;
LTLSIM_NuSMVParser.T__18 = 19;
LTLSIM_NuSMVParser.T__19 = 20;
LTLSIM_NuSMVParser.T__20 = 21;
LTLSIM_NuSMVParser.T__21 = 22;
LTLSIM_NuSMVParser.T__22 = 23;
LTLSIM_NuSMVParser.T__23 = 24;
LTLSIM_NuSMVParser.T__24 = 25;
LTLSIM_NuSMVParser.T__25 = 26;
LTLSIM_NuSMVParser.T__26 = 27;
LTLSIM_NuSMVParser.T__27 = 28;
LTLSIM_NuSMVParser.T__28 = 29;
LTLSIM_NuSMVParser.T__29 = 30;
LTLSIM_NuSMVParser.T__30 = 31;
LTLSIM_NuSMVParser.T__31 = 32;
LTLSIM_NuSMVParser.T__32 = 33;
LTLSIM_NuSMVParser.T__33 = 34;
LTLSIM_NuSMVParser.T__34 = 35;
LTLSIM_NuSMVParser.T__35 = 36;
LTLSIM_NuSMVParser.T__36 = 37;
LTLSIM_NuSMVParser.T__37 = 38;
LTLSIM_NuSMVParser.T__38 = 39;
LTLSIM_NuSMVParser.T__39 = 40;
LTLSIM_NuSMVParser.T__40 = 41;
LTLSIM_NuSMVParser.T__41 = 42;
LTLSIM_NuSMVParser.T__42 = 43;
LTLSIM_NuSMVParser.T__43 = 44;
LTLSIM_NuSMVParser.T__44 = 45;
LTLSIM_NuSMVParser.T__45 = 46;
LTLSIM_NuSMVParser.T__46 = 47;
LTLSIM_NuSMVParser.T__47 = 48;
LTLSIM_NuSMVParser.T__48 = 49;
LTLSIM_NuSMVParser.T__49 = 50;
LTLSIM_NuSMVParser.T__50 = 51;
LTLSIM_NuSMVParser.T__51 = 52;
LTLSIM_NuSMVParser.T__52 = 53;
LTLSIM_NuSMVParser.T__53 = 54;
LTLSIM_NuSMVParser.ID = 55;
LTLSIM_NuSMVParser.NUMBER = 56;
LTLSIM_NuSMVParser.UINT = 57;
LTLSIM_NuSMVParser.WS = 58;

LTLSIM_NuSMVParser.RULE_plHolders = 0;
LTLSIM_NuSMVParser.RULE_durPlHolders = 1;
LTLSIM_NuSMVParser.RULE_proposition = 2;
LTLSIM_NuSMVParser.RULE_simpleExpr = 3;
LTLSIM_NuSMVParser.RULE_arithmetic_expr = 4;
LTLSIM_NuSMVParser.RULE_ltlExpr = 5;
LTLSIM_NuSMVParser.RULE_pastTimedUnaryOp = 6;
LTLSIM_NuSMVParser.RULE_pastUnaryOp = 7;
LTLSIM_NuSMVParser.RULE_pastBinaryOp = 8;
LTLSIM_NuSMVParser.RULE_futureTimedUnaryOp = 9;
LTLSIM_NuSMVParser.RULE_futureUnaryOp = 10;
LTLSIM_NuSMVParser.RULE_futureBinaryOp = 11;
LTLSIM_NuSMVParser.RULE_comparisonOp = 12;
LTLSIM_NuSMVParser.RULE_bound = 13;
LTLSIM_NuSMVParser.RULE_saltBound = 14;
LTLSIM_NuSMVParser.RULE_lp = 15;
LTLSIM_NuSMVParser.RULE_lpA = 16;
LTLSIM_NuSMVParser.RULE_rp = 17;
LTLSIM_NuSMVParser.RULE_rpA = 18;
LTLSIM_NuSMVParser.RULE_not = 19;
LTLSIM_NuSMVParser.RULE_and = 20;
LTLSIM_NuSMVParser.RULE_or = 21;
LTLSIM_NuSMVParser.RULE_xor = 22;
LTLSIM_NuSMVParser.RULE_implies = 23;
LTLSIM_NuSMVParser.RULE_equiv = 24;
LTLSIM_NuSMVParser.RULE_f = 25;
LTLSIM_NuSMVParser.RULE_t = 26;
LTLSIM_NuSMVParser.RULE_expt = 27;
LTLSIM_NuSMVParser.RULE_mult = 28;
LTLSIM_NuSMVParser.RULE_div = 29;
LTLSIM_NuSMVParser.RULE_mod = 30;
LTLSIM_NuSMVParser.RULE_plus = 31;
LTLSIM_NuSMVParser.RULE_minus = 32;
LTLSIM_NuSMVParser.RULE_negate = 33;

function PlHoldersContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLSIM_NuSMVParser.RULE_plHolders;
    return this;
}

PlHoldersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PlHoldersContext.prototype.constructor = PlHoldersContext;


PlHoldersContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLSIM_NuSMVListener ) {
        listener.enterPlHolders(this);
	}
};

PlHoldersContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLSIM_NuSMVListener ) {
        listener.exitPlHolders(this);
	}
};

PlHoldersContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLSIM_NuSMVVisitor ) {
        return visitor.visitPlHolders(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LTLSIM_NuSMVParser.PlHoldersContext = PlHoldersContext;

LTLSIM_NuSMVParser.prototype.plHolders = function() {

    var localctx = new PlHoldersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, LTLSIM_NuSMVParser.RULE_plHolders);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 68;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << LTLSIM_NuSMVParser.T__0) | (1 << LTLSIM_NuSMVParser.T__1) | (1 << LTLSIM_NuSMVParser.T__2) | (1 << LTLSIM_NuSMVParser.T__3) | (1 << LTLSIM_NuSMVParser.T__4) | (1 << LTLSIM_NuSMVParser.T__5) | (1 << LTLSIM_NuSMVParser.T__6) | (1 << LTLSIM_NuSMVParser.T__7) | (1 << LTLSIM_NuSMVParser.T__8) | (1 << LTLSIM_NuSMVParser.T__9) | (1 << LTLSIM_NuSMVParser.T__10) | (1 << LTLSIM_NuSMVParser.T__11) | (1 << LTLSIM_NuSMVParser.T__12) | (1 << LTLSIM_NuSMVParser.T__13))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DurPlHoldersContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLSIM_NuSMVParser.RULE_durPlHolders;
    return this;
}

DurPlHoldersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DurPlHoldersContext.prototype.constructor = DurPlHoldersContext;


DurPlHoldersContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLSIM_NuSMVListener ) {
        listener.enterDurPlHolders(this);
	}
};

DurPlHoldersContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLSIM_NuSMVListener ) {
        listener.exitDurPlHolders(this);
	}
};

DurPlHoldersContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLSIM_NuSMVVisitor ) {
        return visitor.visitDurPlHolders(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LTLSIM_NuSMVParser.DurPlHoldersContext = DurPlHoldersContext;

LTLSIM_NuSMVParser.prototype.durPlHolders = function() {

    var localctx = new DurPlHoldersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, LTLSIM_NuSMVParser.RULE_durPlHolders);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 70;
        _la = this._input.LA(1);
        if(!(_la===LTLSIM_NuSMVParser.T__14 || _la===LTLSIM_NuSMVParser.T__15)) {
        this._errHandler.recoverInline(this);
        }
        else {
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PropositionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLSIM_NuSMVParser.RULE_proposition;
    return this;
}

PropositionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PropositionContext.prototype.constructor = PropositionContext;

PropositionContext.prototype.ID = function() {
    return this.getToken(LTLSIM_NuSMVParser.ID, 0);
};

PropositionContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLSIM_NuSMVListener ) {
        listener.enterProposition(this);
	}
};

PropositionContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLSIM_NuSMVListener ) {
        listener.exitProposition(this);
	}
};

PropositionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLSIM_NuSMVVisitor ) {
        return visitor.visitProposition(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LTLSIM_NuSMVParser.PropositionContext = PropositionContext;

LTLSIM_NuSMVParser.prototype.proposition = function() {

    var localctx = new PropositionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, LTLSIM_NuSMVParser.RULE_proposition);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 72;
        this.match(LTLSIM_NuSMVParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SimpleExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LTLSIM_NuSMVParser.RULE_simpleExpr;
    return this;
}

SimpleExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SimpleExprContext.prototype.constructor = SimpleExprContext;


 
SimpleExprContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function BoolCompareContext(parser, ctx) {
	SimpleExprContext.call(this, parser);
    SimpleExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

BoolCompareContext.prototype = Object.create(SimpleExprContext.prototype);
BoolCompareContext.prototype.constructor = BoolCompareContext;

LTLSIM_NuSMVParser.BoolCompareContext = BoolCompareContext;

BoolCompareContext.prototype.arithmetic_expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Arithmetic_exprContext);
    } else {
        return this.getTypedRuleContext(Arithmetic_exprContext,i);
    }
};

BoolCompareContext.prototype.comparisonOp = function() {
    return this.getTypedRuleContext(ComparisonOpContext,0);
};
BoolCompareContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLSIM_NuSMVListener ) {
        listener.enterBoolCompare(this);
	}
};

BoolCompareContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLSIM_NuSMVListener ) {
        listener.exitBoolCompare(this);
	}
};

BoolCompareContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLSIM_NuSMVVisitor ) {
        return visitor.visitBoolCompare(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function SimpleBoolExprContext(parser, ctx) {
	SimpleExprContext.call(this, parser);
    SimpleExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

SimpleBoolExprContext.prototype = Object.create(SimpleExprContext.prototype);
SimpleBoolExprContext.prototype.constructor = SimpleBoolExprContext;

LTLSIM_NuSMVParser.SimpleBoolExprContext = SimpleBoolExprContext;

SimpleBoolExprContext.prototype.not = function() {
    return this.getTypedRuleContext(NotContext,0);
};

SimpleBoolExprContext.prototype.simpleExpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SimpleExprContext);
    } else {
        return this.getTypedRuleContext(SimpleExprContext,i);
    }
};

SimpleBoolExprContext.prototype.proposition = function() {
    return this.getTypedRuleContext(PropositionContext,0);
};

SimpleBoolExprContext.prototype.plHolders = function() {
    return this.getTypedRuleContext(PlHoldersContext,0);
};

SimpleBoolExprContext.prototype.t = function() {
    return this.getTypedRuleContext(TContext,0);
};

SimpleBoolExprContext.prototype.f = function() {
    return this.getTypedRuleContext(FContext,0);
};

SimpleBoolExprContext.prototype.lp = function() {
    return this.getTypedRuleContext(LpContext,0);
};

SimpleBoolExprContext.prototype.rp = function() {
    return this.getTypedRuleContext(RpContext,0);
};

SimpleBoolExprContext.prototype.and = function() {
    return this.getTypedRuleContext(AndContext,0);
};

SimpleBoolExprContext.prototype.or = function() {
    return this.getTypedRuleContext(OrContext,0);
};

SimpleBoolExprContext.prototype.xor = function() {
    return this.getTypedRuleContext(XorContext,0);
};

SimpleBoolExprContext.prototype.implies = function() {
    return this.getTypedRuleContext(ImpliesContext,0);
};

SimpleBoolExprContext.prototype.equiv = function() {
    return this.getTypedRuleContext(EquivContext,0);
};
SimpleBoolExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof LTLSIM_NuSMVListener ) {
        listener.enterSimpleBoolExpr(this);
	}
};

SimpleBoolExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof LTLSIM_NuSMVListener ) {
        listener.exitSimpleBoolExpr(this);
	}
};

SimpleBoolExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LTLSIM_NuSMVVisitor ) {
        return visitor.visitSimpleBoolExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};



LTLSIM_NuSMVParser.prototype.simpleExpr = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new SimpleExprContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 6;
    this.enterRecursionRule(localctx, 6, LTLSIM_NuSMVParser.RULE_simpleExpr, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 90;
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        switch(la_) {
        case 1:
            localctx = new SimpleBoolExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;

            this.state = 75;
            this.not();
            this.state = 76;
            this.simpleExpr(7);
            break;

        case 2:
            localctx = new SimpleBoolExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 78;
            this.proposition();
            break;

        case 3:
            localctx = new SimpleBoolExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 79;
            this.plHolders();
            break;

        case 4:
            localctx = new SimpleBoolExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 80;
            this.t();
            break;

        case 5:
            localctx = new SimpleBoolExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 81;
            this.f();
            break;

        case 6:
            localctx = new SimpleBoolExprContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 82;
            this.lp();
            this.state = 83;
            this.simpleExpr(0);
            this.state = 84;
            this.rp();
            break;

        case 7:
            localctx = new BoolCompareContext(this, localctx);
            this._ctx = localctx;
            _prevctx = localctx;
            this.state = 86;
            this.arithmetic_expr(0);
            this.state = 87;
            this.comparisonOp();
            this.state = 88;
            this.arithmetic_expr(0);
            break;

        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 114;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 112;
                var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new SimpleBoolExprContext(this, new SimpleExprContext(this, _parentctx, _parentState));
                    this.pushNewRecursionContext(localctx, _startState, LTLSIM_NuSMVParser.RULE_simpleExpr);
                    this.state = 92;
                    if (!( this.precpred(this._ctx, 6))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
                    }
                    this.state = 93;
                    this.and();
                    this.state = 94;
                    this.simpleExpr(7);
                    break;
